# workers-axum-turso-boilerplate

./: .dev.vars.example  .gitignore  .gitmodules  .prettierrc.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  wrangler.toml
src/: lib.rs
src/modules/: mod.rs
src/modules/turso/: mod.rs  schemas.rs
src/server/: api.rs  handler.rs  mod.rs  state.rs
